@@ -1,9 +1,10 @@
 plugins {
     id("java")
+    id("application") // Provides the application:run Gradle target
 }
 
 group = "net.mythoclast"
-version = "1.0-SNAPSHOT"
+version = "7.7"
 
 repositories {
     mavenCentral()
@@ -14,6 +15,39 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
-tasks.test {
-    useJUnitPlatform()
+java {
+    sourceCompatibility = JavaVersion.VERSION_22
+}
+
+application {
+    mainClass = "net.mythoclast.tooltime.ToolTime"
+}
+
+tasks {
+    // The only thing going on in here is pre-setting compiler and/or JVM arguments to enable language
+    // preview features without complaining. This is so someone not initiated with the codebase can build right away
+    compileJava {
+        options.compilerArgs.add("--enable-preview")
+    }
+
+    compileTestJava {
+        options.compilerArgs.add("--enable-preview")
+    }
+
+    application {
+        run.get().jvmArgs("--enable-preview")
+    }
+
+    javadoc {
+        (options as CoreJavadocOptions).run {
+            addStringOption("source", "22")
+            addStringOption("Xdoclint:none", "-quiet")
+            addBooleanOption("-enable-preview", true)
+        }
+    }
+
+    test {
+        jvmArgs("--enable-preview")
+        useJUnitPlatform()
+    }
 }
